force-app/main/default/objects/Execution_Criteria_Entry__c/Execution_Criteria_Entry__c.object-meta.xml
<CustomObject>
    <label>Execution Criteria Entry</label>
    <nameField>
        <label>Execution Criteria Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Execution Criteria Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>