force-app/main/default/objects/Execution_Criteria_Entry__c/fields/Execution_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Execution_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Criteria</label>
    <referenceTo>Execution_Criteria__c</referenceTo>
    <relationshipLabel>Execution Criteria Entry</relationshipLabel>
    <relationshipName>Execution_Criteria_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>