force-app/main/default/objects/Execution_Criteria_Entry__c/fields/Matching_Type__c.field-meta.xml
<CustomField>
    <fullName>Matching_Type__c</fullName>
    <label>Matching Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>==</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>BETWEEN</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>DOES NOT CONTAIN</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>ENDS WITH</fullName>
                <isActive>false</isActive>
                <label>ENDS WITH</label>
            </value>
            <value>
                <fullName>STARTS WITH</fullName>
                <isActive>false</isActive>
                <label>STARTS WITH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>