force-app/main/default/objects/Execution_Criteria_Entry__c/fields/Matching_Value__c.field-meta.xml
<CustomField>
    <fullName>Matching_Value__c</fullName>
    <label>Matching Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>