force-app/main/default/objects/Execution_Criteria_Entry__c/fields/Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Scorecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard</label>
    <referenceTo>Scorecard__c</referenceTo>
    <relationshipLabel>Execution Criteria Entry</relationshipLabel>
    <relationshipName>Execution_Criteria_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>