force-app/main/default/objects/Execution_Criteria_Entry__c/fields/Scorecard_Execution_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Execution_Criteria_Name__c</fullName>
    <label>Scorecard Execution Criteria Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>