force-app/main/default/objects/Execution_Criteria_Entry__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>