force-app/main/default/objects/Execution_Criteria_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>Execution_Criteria__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Matching_Type__c</columns>
    <columns>Matching_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>